<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acq_attaching_card_loop_amount_hint">Blocked amount</string>
    <string name="acq_attaching_card_loop_parse_error">Please enter correct amount in coins</string>
    <string name="acq_attaching_card_loop_title">In order to confirm the binding of your card we wrote off and returned a small amount of money (up to 1,99 ₽)/ Please, specify the sum with accuracy to amount of coins.</string>
    <string name="acq_btn_close">Close</string>
    <string name="acq_cant_delete_card_message">Unable to remove the card, try again later</string>
    <string name="acq_card_number_hint">PAN</string>
    <string name="acq_change_card_label">Change</string>
    <string name="acq_check">Check</string>
    <string name="acq_complete_payment">To complete payment, enter CVC</string>
    <string name="acq_complete_payment_ok">OK</string>
    <string name="acq_cvc_hint">CVC</string>
    <string name="acq_default_error_message">Something went wrong</string>
    <string name="acq_default_error_title">Error</string>
    <string name="acq_delete_label">Delete</string>
    <string name="acq_dialog_dismiss_btn">OK</string>
    <string name="acq_email_hint">E-mail for receipt</string>
    <string name="acq_enter_new_card_label">Add new card</string>
    <string name="acq_exp_date_hint">MM/YY</string>
    <string name="acq_invalid_card">Invalid card data</string>
    <string name="acq_invalid_email">Invalid e-mail</string>
    <string name="acq_money_amount_format">%s Р</string>
    <string name="acq_money_label">Amount:</string>
    <string name="acq_network_error_message">Probably the Internet connection is interrupted, try again later</string>
    <string name="acq_new_card_label">New card</string>
    <string name="acq_nfc_description">Bring the card to the back of the phone</string>
    <string name="acq_nfc_is_disable">NFC is turn off</string>
    <string name="acq_nfc_need_enable">Turn on NFC to scan a card</string>
    <string name="acq_nfc_scan_failed">Failed to scan a card</string>
    <string name="acq_no_scan_providers">"There aren't any providers"</string>
    <string name="acq_pay">Pay</string>
    <string name="acq_pay_with_amount">Pay %s Р</string>
    <string name="acq_progress_dialog_attach_card_text">Attaching card…</string>
    <string name="acq_progress_dialog_text">Payment…</string>
    <string name="acq_recurrent_mode_card_hint">Choose card</string>
    <string name="acq_saved_card_label">Linked card</string>
    <string name="acq_screen_title">Payment</string>
    <string name="add">Добавить</string>
    <string name="address_hint">Поиск по адресу</string>
    <string name="app_name">Skooby</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="avatar_change_avatar">Изменить аватар</string>
    <string name="avatar_choose_from_gallery">Выбрать из коллекции</string>
    <string name="avatar_delete">Удалить нынешнее фото</string>
    <string name="avatar_take_photo">Сфотографировать</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brand_hint">Поиск по марке</string>
    <string name="buyer_buyer_canceled_trip_text" />
    <string name="buyer_canceled_trip">К сожалению, покупатель отменил поездку. Пожалуйста, разместите объявление о продаже парковки еще раз.</string>
    <string name="buyer_dispute_seller_canceled" />
    <string name="buyer_found">Есть покупатель!</string>
    <string name="buyer_seller_canceled_trip">К сожалению, продавец отменил поездку.</string>
    <string name="buyer_seller_canceled_trip_money_refund">К сожалению, продавец отменил поездку. Деньги буду возвращены на ваш счет.</string>
    <string name="call">Позвонить</string>
    <string name="cancel_reason">Причина отмены</string>
    <string name="cancel_reason_cant_find_seller">Не могу найти продавца</string>
    <string name="cancel_reason_didnt_wait_buyer">Не дождался покупателя</string>
    <string name="cancel_reason_found_another_place">Нашел другое свободное место</string>
    <string name="cancel_reason_other_car_parked">Другая машина заняла парковку</string>
    <string name="cards_add_card">Добавьте карту</string>
    <string name="cards_add_card_notice">Добавьте карту, чтобы бронировать парковочные места</string>
    <string name="cards_attach">Привязать</string>
    <string name="cards_attach_card">Привязка карты</string>
    <string name="cards_card_not_removed">Ошибка при удалении карты</string>
    <string name="cards_card_removed">Карта успешно удалена</string>
    <string name="cards_choose">Выберите карту</string>
    <string name="cards_failed_to_load">Ошибка при загрузке данных карты</string>
    <string name="cards_main_card">Основная карта</string>
    <string name="cards_number">Номер карты</string>
    <string name="cars_add_car">Добавьте авто</string>
    <string name="cars_add_car_notice">Добавьте машину для того, чтобы люди узнавали вас на парковках</string>
    <string name="cars_brand">Марка</string>
    <string name="cars_choose_auto">Выберите авто</string>
    <string name="cars_color">Цвет</string>
    <string name="cars_edit_car">Изменить авто</string>
    <string name="cars_main_car">Основное авто</string>
    <string name="cars_model">Модель</string>
    <string name="cars_number">Номер</string>
    <string name="cars_number_hint">Гос номер</string>
    <string name="changes_saved">Изменения сохранены</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_telegram">Telegram</string>
    <string name="chat_viber">Viber</string>
    <string name="chat_whatsapp">WhatsApp</string>
    <string name="chip_text">Chip text</string>
    <string name="color_hint">Поиск по цвету</string>
    <string name="com.crashlytics.android.build_id">eef74a58-48b5-45b6-a3fe-8fc5033c2983</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="continue_">Продолжить</string>
    <string name="default_web_client_id">570793743034-tr82715qc7cl0h83jsv0q7pje3dvj1b3.apps.googleusercontent.com</string>
    <string name="delete">Удалить</string>
    <string name="distance_in_km">%.1f км</string>
    <string name="distance_in_meters">%d м</string>
    <string name="finances_current_balance">Текущий баланс</string>
    <string name="finances_no_templates">Нет шаблонов</string>
    <string name="finances_no_templates_notice">Добавьте шаблон, чтобы перевести деньги на свой счет</string>
    <string name="finances_transfer_to_bank_account">Перевести на счет в банке</string>
    <string name="font_family_medium">sans-serif</string>
    <string name="i_liked_it">Мне понравилось</string>
    <string name="next">Далее</string>
    <string name="parking_sold_amount_zero" />
    <string name="parking_sold_congratulations">Поздравляем с продажей!</string>
    <string name="phone_field">Телефон</string>
    <string name="phone_field_hint">+7 (___) ___-____</string>
    <string name="profile_dev_settings">Настройки разработчика</string>
    <string name="profile_name">Имя</string>
    <string name="profile_specify_name">Укажите свое имя</string>
    <string name="registration_subtitle">Введите свой номер телефона</string>
    <string name="registration_title">Регистрация</string>
    <string name="save">Сохранить</string>
    <string name="terms_of_service_notice">"Регистрируясь, вы принимаете условия&lt;br>&lt;b>&lt;a href='https://www.skoo.by/terms/'>пользовательского соглашения&lt;a/>&lt;b/>"</string>
    <string name="to_the_main_screen">На главный экран</string>
    <string name="transfer_success_subtitle">В течение наскольких рабочих дней на ваш счет поступит</string>
    <string name="transfer_success_title">Заявка отправлена</string>
    <string name="trip_cancel_booking">Отменить поездку</string>
    <string name="trip_finish_question">Завершить поездку?</string>
    <string name="trip_successful_parking">Успешная парковка</string>
    <string name="unsuccess">Неудача</string>
</resources>