<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@id/background_view" android:background="@color/immersive_background" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/container_panel" android:background="@android:color/white" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/dark_gray_text" android:id="@id/text_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginTop="12.0dip" android:layout_marginRight="@dimen/margin_normal" android:layout_marginBottom="12.0dip" android:text="@string/avatar_change_avatar" />
        <TextView android:id="@id/text_remove_current" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/avatar_delete" android:drawableLeft="@drawable/ic_error" style="@style/BottomPanelText" />
        <TextView android:id="@id/text_take_photo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/avatar_take_photo" android:drawableLeft="@drawable/ic_take_photo" style="@style/BottomPanelText" />
        <TextView android:id="@id/text_choose_from_gallery" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/avatar_choose_from_gallery" android:drawableLeft="@drawable/ic_arrow_down" style="@style/BottomPanelText" />
    </LinearLayout>
</FrameLayout>