<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/red" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/image_cross" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="90.0dip" android:src="@drawable/ic_cross_red" android:layout_centerHorizontal="true" />
    <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/text_cancel_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/unsuccess" android:layout_below="@id/image_cross" android:layout_centerHorizontal="true" android:fontFamily="@string/font_family_medium" />
    <TextView android:textSize="17.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/text_cancel_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="50.0dip" android:text="@string/buyer_seller_canceled_trip" android:layout_below="@id/text_cancel_title" />
    <TextView android:textSize="20.0sp" android:textColor="@color/dark_gray_text" android:gravity="center" android:id="@id/btn_finish" android:background="@drawable/btn_big_white" android:duplicateParentState="false" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginRight="@dimen/margin_normal" android:layout_marginBottom="30.0dip" android:text="@string/to_the_main_screen" android:includeFontPadding="false" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>