<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/bg_gradient" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/image_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="135.0dip" android:src="@drawable/ic_check_green_big" android:layout_centerHorizontal="true" />
    <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/label_request_created" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/transfer_success_title" android:layout_below="@id/image_check" android:layout_centerHorizontal="true" android:fontFamily="@string/font_family_medium" />
    <TextView android:textSize="15.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/label_money_transferred" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:text="@string/transfer_success_subtitle" android:layout_below="@id/label_request_created" android:layout_centerHorizontal="true" android:fontFamily="@string/font_family_medium" />
    <TextView android:textSize="30.0sp" android:textColor="@android:color/white" android:id="@id/text_money" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_below="@id/label_money_transferred" android:layout_centerHorizontal="true" android:fontFamily="@string/font_family_medium" />
    <TextView android:textSize="20.0sp" android:textColor="@color/dark_gray_text" android:gravity="center" android:id="@id/btn_finish" android:background="@drawable/btn_big_white" android:duplicateParentState="false" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginRight="@dimen/margin_normal" android:layout_marginBottom="30.0dip" android:text="@string/to_the_main_screen" android:includeFontPadding="false" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>