<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:theme="?toolbarStyle" android:id="@id/toolbar" android:background="@color/white_alternative" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/name_edit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginTop="76.0dip" android:layout_marginRight="@dimen/margin_normal" android:hint="@string/profile_specify_name" android:lines="1" android:singleLine="true" android:layout_below="@id/toolbar" android:inputType="textPersonName" app:met_floatingLabelText="@string/profile_name" style="@style/LightTextField" />
    <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/btn_submit" android:background="@drawable/btn_big_blue" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginRight="@dimen/margin_normal" android:layout_marginBottom="30.0dip" android:text="@string/save" android:includeFontPadding="false" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <include layout="@layout/view_progress_overlay" />
</RelativeLayout>