<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/bg_gradient" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/bg_header_celebration" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/image_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:src="@drawable/ic_check_green_big" android:layout_centerHorizontal="true" />
    <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/text_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/parking_sold_congratulations" android:layout_below="@id/image_check" android:layout_centerHorizontal="true" android:fontFamily="@string/font_family_medium" />
    <TextView android:textSize="15.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/text_description" android:paddingLeft="@dimen/margin_normal" android:paddingRight="@dimen/margin_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:text="@string/parking_sold_amount_zero" android:layout_below="@id/text_title" android:layout_centerHorizontal="true" android:fontFamily="@string/font_family_medium" />
    <TextView android:textSize="30.0sp" android:textColor="@android:color/white" android:id="@id/text_money" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/text_description" android:layout_centerHorizontal="true" android:fontFamily="@string/font_family_medium" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/btn_like" android:background="@drawable/btn_big_white" android:duplicateParentState="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:minWidth="240.0dip" android:minHeight="45.0dip" android:layout_below="@id/text_money" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/image_like_heart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/ic_like_20dp" android:tint="@color/gray_text" />
        <View android:background="@color/dark_blue" android:layout_width="0.5dip" android:layout_height="fill_parent" android:alpha="0.2" />
        <TextView android:textSize="15.0sp" android:textColor="@color/gray_text" android:id="@id/text_like" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/i_liked_it" />
    </LinearLayout>
    <View android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="32.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="32.0dip" android:layout_below="@id/btn_like" android:alpha="0.45" />
    <TextView android:textSize="20.0sp" android:textColor="@color/dark_gray_text" android:gravity="center" android:id="@id/btn_finish" android:background="@drawable/btn_big_white" android:duplicateParentState="false" android:layout_width="fill_parent" android:layout_height="@dimen/button_height" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginRight="@dimen/margin_normal" android:layout_marginBottom="30.0dip" android:text="@string/to_the_main_screen" android:includeFontPadding="false" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <View android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" android:layout_marginBottom="25.0dip" android:layout_above="@id/btn_finish" android:alpha="0.45" />
</RelativeLayout>